--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,7 +41,7 @@ jobs:
 
   DeployStaging:
     name: Deploy to Staging
-    if: github.event.name == 'refs/heads/main'
+    if: github.event_name == 'refs/heads/main'
     needs: [Build]
     runs-on: ubuntu-latest
     environment:
